modif bdd + bouton répartir

--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-	<button id="repartir">Répartir</button>
+	<input type="button" id="repartir" value="Répartir" onclick="window.location.reload()" />
 
 	<h1>Table 1</h1>
 	<ul class="table" id="t0"></ul>
