--- a/www/index.html
+++ b/www/index.html
@@ -2,20 +2,22 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Placement Victor</title>
+	<title>Générateur groupes aléatoire</title>
 
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
 	<div id="commande">
-
-		<label for="repartir">Lancer le trie</label>
-		<input type="button" class="bouton" id="repartir" value="Go" onclick="window.location.reload()" />
 		
-		<label for="nb_groupes">Nombre de groupes</label>
+		<label for="nb_groupes">Nombre de groupes : </label>
 		<input type="number" class="bouton" id="nb_groupes" value="3" min="2" max="100" />
+
+		<label for="repartir">Lancer le trie : </label>
+		<input type="button" class="bouton" id="repartir" value="Go" onclick="window.location.reload()" />
 	
 	</div>
+
+	<h2 id="get_nb_groupes"></h2>
 
 	<div id="groups"></div>
 
